<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_6dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingLeft="12dp"
        android:text="@string/name_gif"
        android:textSize="@dimen/text_size_14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nameGif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingLeft="12dp"
        android:text="@string/name_gif"
        android:textSize="@dimen/text_size_12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_300"
        android:layout_margin="@dimen/layout_margin_6dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_6dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingLeft="12dp"
        android:text="@string/size_gif"
        android:textSize="@dimen/text_size_14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sizeGif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingLeft="12dp"
        android:text="@string/size_gif"
        android:textSize="@dimen/text_size_12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_300"
        android:layout_margin="@dimen/layout_margin_6dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_6dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingLeft="12dp"
        android:text="@string/date_creat_gif"
        android:textSize="@dimen/text_size_14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dateCreatGif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:text="@string/date_creat_gif"
        android:textSize="@dimen/text_size_12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_300"
        android:layout_margin="@dimen/layout_margin_6dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_6dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingLeft="12dp"
        android:text="@string/path_gif"
        android:textSize="@dimen/text_size_14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pathGif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:text="@string/path_gif"
        android:textSize="@dimen/text_size_12sp" />

</LinearLayout>